start about section, remove nav disappear effect, fix vertical nav hover highlight, fix nav jump spacing

--- a/css/boo.css
+++ b/css/boo.css
@@ -15,7 +15,7 @@
 .boo {
     height: 10px;
     width: 10px;
-    margin: 80px auto 200px;
+    margin: 0px auto 200px;
     animation-name: floating;
     animation-duration: 3s;
     animation-iteration-count: infinite;
